styling css modernization

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
 <main>
     <div>
-        <img id="logo" src="logo booksearch.png">
+        <a href="../index.html"><img id="logo" src="logo booksearch.png" alt="website logo"></a>
     </div>
     <div id="Div-to-search">
         <textarea id="Text-to-search"></textarea>
+        <p id="signature">Write title or author of the book <br> Wpisz tytuł lub autora książki</p>
     </div>
     <div id="Search-div">
         <button id="Search">Search</button>
