--- a/index.html
+++ b/index.html
@@ -84,12 +84,18 @@
         <p class="footer__copyright">
           &copy; Copyright by
           <a
-            class="footer__link twitter-link"
             target="_blank"
-            href="https://twitter.com/mi_stochaj"
+            href="https://github.com/MiloszStochaj"
             >Miłosz Stochaj</a
           >
         </p>
+
+        
+        <div class="links__icons">
+          <a href="https://twitter.com/mi_stochaj"><i class="fa-brands fa-twitter"></i></a>
+          <a href="https://github.com/MiloszStochaj"><i class="fa-brands fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/mi%C5%82osz-stochaj-931296125/"><i class="fa-brands fa-linkedin"></i></a>
+        </div>
       </footer>
     </div>
 
