--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
       </section>
 
       <footer class="footer">
-        <!-- <div class="frontsite__img">
+        <div class="footer__img">
             <img src="/Dumbledore.png" alt="Dumbledore_IMG">
             <img src="/stars_gold.png" alt="Gold_stars_IMG">
-        </div> -->
+        </div>
 
         <p class="footer__copyright">
           &copy; Copyright by
