Fixed weather request bugs. Implemented additional weather parameters and its presentation.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1 id="header">Project: PO2397</h1>
 
     <section>
-      <h2>Weather</h2>
-      <div id="geo"></div>
-      <div id="weather">
+      <h2 class="header">Weather Information</h2>
+      <div id="geolocalization" class="geolocalization-container"></div>
+      <div id="weather" class="weather-container">
         <div id="weather-loader" class="loader">Loading...</div>
       </div>
     </section>
