media queries landscape

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-
+ 
 	<div class="news">
 		<div>Witaj! Dziś jest <span class="day"></span>.</div>
 		<div>Czy wiesz, że...</div> 
@@ -79,7 +79,7 @@
 			<h3>Instrukcja:</h3>
 			<p>1. Wybierz z menu rozwijanego z lewej strony walutę którą chcesz kupić.</p>
 			<p>2. Wybierz z menu rozwijanego z prawej strony walutę którą chcesz wymienić.</p>
-			<p>3. Przyciskiem możesz zamienić wybrane wcześniej waluty.</p>
+			<p>3. Przyciskiem <i class="fa-solid fa-arrow-right-arrow-left"></i> możesz zamienić wybrane wcześniej waluty.</p>
 			<p>Przyciskiem <i class="fa-solid fa-palette"></i> wybierz kolorystykę.</p>
 			<p class="wishes">Życzymy samych udanych transakcji !</p>
 			<button class="close">Zamknij</button>
