--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="./style.css" />
     <script src="./script.js"></script>
     <title>AURORA MAP</title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="map"></div>
 
-        <script
+    <script
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1MJLtZVpzhnM8xLSlKSWW90DqehAhnAI&callback=initMap&v=weekly"
       async
     ></script>
