html and css and  AuroraMovie

--- a/map.html
+++ b/map.html
@@ -14,14 +14,13 @@
       <a href="map.html">AURORA MAP</a>
       <a href="kp.html">AURORA KP</a>
     </nav>
-    <header class="aurora">
-      <!--  <video src="Movie1.mp4" control> -->
-      <video class="AuroraMovie" src="AuroraMovie.mp4" autoplay loop muted>
-        <p>sorry, no video</p>
-      </video>
-      <h1 class="auroraTitle">Aurora Project</h1>
-    </header>
+   
 
-    
+    <div id="map"></div>
+
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA1MJLtZVpzhnM8xLSlKSWW90DqehAhnAI&callback=initMap&v=weekly"
+      async
+    ></script>
   </body>
 </html>
