Add canvas and buttons

--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Anna's canvas</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <nav id="nav">
+      <p id="logo" class="navigation">Logo</p>
+      <p id="new_image" class="navigation">Draw new image!</p>
+      <p id="previous" class="navigation">Previous project</p>
+      <p id="me">About me</p>
+    </nav>
+    <header></header>
+    <main>
+      <canvas id="canvas" width="300" height="350">The canva is error</canvas>
+      <div id="buttons">
+        <button id="clear-button">Clear</button>
+        <button id="save-button">Save</button>
+      </div>
+    </main>
+    <script src="main.js"></script>
+  </body>
 </html>
