--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
 
         <div class="spells__container--1"></div>
         <div class="spells__container--2 hidden"></div>
-        <button class="show__more">Show more</button>
+
+        <button class="show__btn show__more">Show more</button>
+
+        <button class="show__btn show__less hidden">Show less</button>
       </section>
 
       <footer class="footer">
