--- a/index.html
+++ b/index.html
@@ -4,7 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Lyrics searcher</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Chill out and sing!</h1>
+
+      <form id="form">
+        <input type="text" id="search" placeholder="Enter song name or artist..">
+        <button>Search for lyrics</button>
+      </form>
+
+    </header>
+
+
+    <div id="result" class="container">
+      <p>Check for results...</p>
+    </div>
+
+
+      <script src="main.js"></script>
+    </header>
+  </body>
 </html>
