--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <script type="module" src="main.js"></script>
     <script type="module" src="pagination.js"></script>
-    <script type="module" src="pagination-suggestions.js"></script>
+    <!-- <script type="module" src="/pagination-suggestions.js"></script> -->
     <script type="module" src="scrolling.js"></script>
   </body>
 </html>
