--- a/index.html
+++ b/index.html
@@ -11,27 +11,15 @@
   <body>
     <div>
       <header>
-        <section>
-          <h1>Html, CSS i JavaScript</h1>
-        </section>
-        <nav class="navbar">
-          <a href="#">Link</a>
-          <a href="#">Link</a>
-          <a href="#">Link</a>
-        </nav>
+          <h1>Business Contact List</h1>
       </header>
       <main>
-        <article>
-          <h2>Title - Lorem ipsum</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, magnam deserunt.
-            Totam eos illum quasi tempora rem quod vitae neque eius debitis similique, assumenda
-            ipsam tempore itaque. Ducimus, eligendi harum.
-          </p>
-        </article>
+         <ul class="list">
+
+         </ul>
       </main>
       <footer>
-        <h5>Footer - Projekt zaliczeniowy Html, CSS i JavaScript</h5>
+        <h5>Projekt zaliczeniowy Html, CSS i JavaScript</h5>
       </footer>
     </div>
     <script src="main.js"></script>
