--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anna's canvas</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
   </head>
   <body>
     <nav id="nav">
@@ -14,13 +15,22 @@
       <p id="previous" class="navigation">Previous project</p>
       <p id="me">About me</p>
     </nav>
-    <header></header>
+    <header>
+      <section class="colors" class="left">
+        <div id="generated-colors"></div>
+        <button id="color-button">Generate colors</button>
+      </section>
+      <section class="emojis" class="right">
+        <div id="generated-emojis"></div>
+        <button id="emojis-button">Generate emojis</button>
+      </section>
+    </header>
     <main>
       <canvas id="canvas" width="300" height="350">The canva is error</canvas>
-      <div id="buttons">
+      <section id="buttons">
         <button id="clear-button">Clear</button>
         <button id="save-button">Save</button>
-      </div>
+      </section>
     </main>
     <script src="main.js"></script>
   </body>
