fetch - Contact List Flex Wrap - reqres.in

--- a/index.html
+++ b/index.html
@@ -9,19 +9,15 @@
     <meta name="description" content="Lorem ipsum dolor sit amet consectetur adipisicing elit.">
   </head>
   <body>
-    <div>
+    <div class="container">
       <header>
           <h1>Business Contact List</h1>
       </header>
-      <main>
-         <ul class="list">
-
-         </ul>
-      </main>
+      <main class="list"></main>
       <footer>
         <h5>Projekt zaliczeniowy Html, CSS i JavaScript</h5>
       </footer>
-    </div>
     <script src="main.js"></script>
+    </div>
   </body>
 </html>
