--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lyrics searcher</title>
+    <title>Lyrics finder</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <h1>Chill out and sing!</h1>
+
+      <h1>Let's sing!</h1>
 
       <form id="form">
         <input type="text" id="search" placeholder="Enter song name or artist..">
@@ -19,7 +20,7 @@
     </header>
 
     <div id="result" class="container">
-      <p>Check for results...</p>
+      <p>Check the results...</p>
     </div>
 
 
