fetch - CSS flex and colors mod - reqres.in

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
   </head>
   <body>
     <div class="container">
-      <header>
+      <header class="main-title">
           <h1>Business Contact List</h1>
       </header>
-      <main class="list"></main>
-      <footer>
+      <main class="contact-list">
+      </main>
+      <footer class="footer-desc">
         <h5>Projekt zaliczeniowy Html, CSS i JavaScript</h5>
       </footer>
     <script src="main.js"></script>
