--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <title>Projekt zaliczeniowy Html, CSS i JavaScript</title>
     <meta name="description" content="Lorem ipsum dolor sit amet consectetur adipisicing elit.">
   </head>
   <body>
-    <div class="container">
+    <div class="main-container">
       <header class="main-title">
           <h1>Business Contact List</h1>
       </header>
