fetch - footer and CSS mods - reqres.in

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <main class="contact-list">
       </main>
       <footer class="footer-desc">
-        <h5>Projekt zaliczeniowy Html, CSS i JavaScript</h5>
+        <h5>Html - CSS - JavaScript + Fetch API</h5>
       </footer>
     <script src="main.js"></script>
     </div>
