--- a/index.html
+++ b/index.html
@@ -6,22 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anna's canvas</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
   <body>
     <nav id="nav">
       <p id="logo" class="navigation">Logo</p>
-      <p id="new_image" class="navigation">Draw new image!</p>
-      <p id="previous" class="navigation">Previous project</p>
+      <p id="new-image" class="navigation">Draw new image!</p>
+      <p id="previous-project" class="navigation">Previous project</p>
       <p id="me">About me</p>
     </nav>
-    <header>
+    <header id="header">
       <section class="colors" class="left">
         <div id="generated-colors"></div>
         <button id="color-button">Generate colors</button>
       </section>
       <section class="emojis" class="right">
-        <div id="generated-emojis"></div>
+        <a id="previous">&#8249;</a>
+        <span id="generated-emojis"></span>
+        <a id="next">&#8250;</a>
         <button id="emojis-button">Generate emojis</button>
       </section>
     </header>
