--- a/index.html
+++ b/index.html
@@ -6,16 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Javascript Project - 2022 </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
     <!-- navigation -->
-   <nav class="navbar navbar-expand-lg bg-success navbar-dark">
+   <nav class="navbar navbar-expand-lg bg-success navbar-dark py-3">
        <div class="container">
-           <a href="#" class="navbar-brand"> XXXX</a>
+           <a href="#" class="navbar-brand"> WeDiet.Co</a>
         <div class="collapse navbar-collapse" id="navi"></div>
-        <ul class="navbar-nav ms-auto" >
+        <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+                <a href="#info" class="nav-link">About
+                </a>
+            </li>
             <li class="nav-item">
                 <a href="#contact" class="nav-link">Contact us
                 </a>
@@ -28,16 +32,23 @@
                 <a href="#team" class="nav-link">Our team
                 </a>
             </li>
+            <li class="navbar-nav ms-auto" >
+                <a href="#faq" class="nav-link">FAQ
+                </a>
+            </li>
         </ul>
         </div>
    </nav>
 <!-- entry pic + order diet section -->
-    <section class="bg-light text-light pt-3 text-center">
+    <section class="bg-light text-success py-5 text-center text-sm-start">
         <div class="container">
-            <div>
-
-            </div>
-        </div>
+            <div class="d-sm-flex align-items-center justify-content-between">
+                <div>
+                        <h1> Become a <span class="text-warning">better version</span> of yourself!</h1>
+                        <p class="lead my-4"> Focus on loosing weight without loosing your joy of life!</p>
+                        <button class="btn btn-warning btn-lg"> Start Diet</button>
+                    </div>
+                    <img id="image" class="img-fluid d-none d-sm-block" src="Fitz - Standing.png" alt="drawing of a man">
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
