about us and api drafts

--- a/index.html
+++ b/index.html
@@ -12,16 +12,12 @@
 <body>
     <!-- navigation -->
    <nav class="navbar navbar-expand-lg bg-success navbar-dark py-3">
-       <div class="container">
+       <div class="container ">
            <a href="#" class="navbar-brand"> WeDiet.Co</a>
         <div class="collapse navbar-collapse" id="navi"></div>
         <ul class="navbar-nav ms-auto">
             <li class="nav-item">
                 <a href="#info" class="nav-link">About
-                </a>
-            </li>
-            <li class="nav-item">
-                <a href="#contact" class="nav-link">Contact us
                 </a>
             </li>
             <li class="navbar-nav ms-auto" >
@@ -30,6 +26,10 @@
             </li>
             <li class="navbar-nav ms-auto" >
                 <a href="#team" class="nav-link">Our team
+                </a>
+            </li>
+            <li class="nav-item">
+                <a href="#contact" class="nav-link">Contact
                 </a>
             </li>
             <li class="navbar-nav ms-auto" >
@@ -46,10 +46,58 @@
                 <div>
                         <h1> Become a <span class="text-warning">better version</span> of yourself!</h1>
                         <p class="lead my-4"> Focus on loosing weight without loosing your joy of life!</p>
-                        <button class="btn btn-warning btn-lg"> Start Diet</button>
+                        <button class="btn btn-center btn-warning btn-lg"> Start Diet</button>
                     </div>
                     <img id="image" class="img-fluid d-none d-sm-block" src="Fitz - Standing.png" alt="drawing of a man">
     </section>
+   
+<!-- ABOUT  -->
+<section class="bg-success text-light p-5 text-center text-sm-start">
+    <div class="container">
+        <div class="d-sm-flex align-items-center justify-content-between">
+            <img id="image" class="img-fluid d-none d-sm-block" src="Humaaans - 3 Characters.png" alt="Picture of people">
+            <div class="p-4 text-justify">
+                    <h1> About Us</h1>
+                    <p class="lead my-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil libero repudiandae quae voluptates reprehenderit! Vitae asperiores quisquam odit! Veniam corrupti laborum soluta iusto molestias, provident praesentium perferendis natus et. Labore. Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim odit quae necessitatibus deleniti corporis hic, reprehenderit vel cupiditate officia eaque tenetur beatae officiis inventore adipisci veritatis minima dicta blanditiis perspiciatis. </p>
+                
+                </div>
+</section>
+<!-- BMI CALCULATOR -->
+<section class="bg-light text-success py-5 text-center text-sm-start">
+    <div class="container">
+        <div class="d-sm-flex align-items-center justify-content-between">
+            <div>
+                    <h1> <span class="text-warning"> BMI </span> CALCULATOR </h1>
+                    <p class="lead my-4"> here should be bmi api </p>
+                    <button class="btn btn-center btn-warning btn-lg"> count caloriess</button>
+                </div>
+                <img id="image" class="img-fluid d-none d-sm-block" src="Stuck at Home - Stats and Graphs.png" alt="drawing of a man">
+</section>
+
+<!-- TEAM  -->
+
+<section class="bg-success text-light p-5 text-center text-sm-start">
+    <div class="container">
+        <div class="d-sm-flex align-items-center justify-content-between">
+            <div class="p-4 text-justify">
+                    <h1> OUR TEAM </h1>
+                    <p class="lead my-4"> here should be reqres API </p>
+                </div>
+</section>
+
+<!-- <section class="section bg-success text-light p-5">
+    <div class="container">
+
+        <img id="image" class="img-fluid d-none d-sm-block" src="Humaaans - 3 Characters.png" alt="human picture">
+        <div>
+            <h1> ABOUT US </h1>
+        </div>
+
+    </div>
+</section> -->
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="main.js"></script>
