--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav id="nav">
       <p id="logo" class="navigation">Logo</p>
       <p id="new-image" class="navigation">Draw new image!</p>
-      <p id="previous-project" class="navigation">Previous project</p>
+      <p id="previous-project" class="navigation">Previous projects</p>
       <p id="me">About me</p>
     </nav>
     <header id="header">
@@ -32,10 +32,13 @@
       </section>
     </header>
     <main>
+      <section id="previous-project-display">
+  
+      </section>
       <canvas id="canvas" width="300" height="350">The canva is error</canvas>
       <section id="buttons">
         <button id="clear-button">Clear</button>
-        <button id="save-button">Save</button>
+        <a id="save-button">Save</a>
       </section>
     </main>
     <script src="main.js"></script>
