zrobiłam przeciski na img

--- a/index.html
+++ b/index.html
@@ -45,7 +45,32 @@
                         </div>
                     </div>
 
-                    <article class="buttons">
+                    <article class="buttons1">
+                        <div class="detailsButton">
+                            <button>
+                                <a href="https://miroslawzelent.pl/kurs-html/hiperlacza-linki-w-html/#" target="_self">
+                                    <i class="fa-solid fa-bars"></i>
+                                </a>
+                            </button>
+                        </div>
+                        <div class="youtubeButton">
+                            <button>
+                                <i class="fa-brands fa-youtube"></i ></button>
+                        </div>
+                        <div class="mailButton">
+                            <button>
+                                <i class="fa-solid fa-envelope"></i>
+                            </button>
+                        </div>
+                    </article>
+                </section>
+                <section class="foodSuggest">
+                    <div class="imgFood"> <img src="obrazki/2.jpg" alt="Wylosowany obiadek" width="300 " height="400px">
+                        <div class="titleRecipe2">
+                            <h3>Nazwa przepisu</h3>
+                        </div>
+                    </div>
+                    <article class="buttons2">
                         <div class="detailsButton">
                             <button>
                                 <a href="https://miroslawzelent.pl/kurs-html/hiperlacza-linki-w-html/#" target="_self">
@@ -65,45 +90,28 @@
                     </article>
                 </section>
                 <section class="foodSuggest">
-                    <div class="imgFood"> <img src="obrazki/2.jpg" alt="Wylosowany obiadek" width="300 " height="400px">
-                        <div class="titleRecipe2">
-                            <h3>Nazwa przepisu</h3>
-                        </div>
-                    </div>
-                    <article class="buttons">
-                        <div class="detailsButton">
-                            <button>
-                                <a href="https://miroslawzelent.pl/kurs-html/hiperlacza-linki-w-html/#"
-                                    target="_self"><i class="fa-thin fa-memo-circle-info"></i></a>
-                            </button>
-                        </div>
-                        <div class="youtubeButton">
-                            <button> youtube</button>
-                        </div>
-                        <div class="mailButton">
-                            <button>Wyślij</button>
-                        </div>
-                    </article>
-                </section>
-                <section class="foodSuggest">
                     <div class="imgFood">
                         <img src="obrazki/3.jpg" alt="Wylosowany obiadek" width="300 " height="400px">
                         <div class="titleRecipe3">
                             <h3>Nazwa przepisu</h3>
                         </div>
                     </div>
-                    <article class="buttons">
+                    <article class="buttons3">
                         <div class="detailsButton">
                             <button>
-                                <a href="https://miroslawzelent.pl/kurs-html/hiperlacza-linki-w-html/#"
-                                    target="_self">Szczeguły</a>
+                                <a href="https://miroslawzelent.pl/kurs-html/hiperlacza-linki-w-html/#" target="_self">
+                                    <i class="fa-solid fa-bars"></i>
+                                </a>
                             </button>
                         </div>
                         <div class="youtubeButton">
-                            <button> youtube</button>
+                            <button>
+                                <i class="fa-brands fa-youtube"></i></button>
                         </div>
                         <div class="mailButton">
-                            <button>Wyślij</button>
+                            <button>
+                                <i class="fa-solid fa-envelope"></i>
+                            </button>
                         </div>
                     </article>
                 </section>
