--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <article class="articlelist">
         <header>
 
-            <p class="title"><i class="fa-solid fa-plate-wheat"></i> Losuj Obiadek</p>
+            <h1 class="title"><i class="fa-solid fa-plate-wheat"></i> Losuj Obiadek</h>
         </header>
         <section class="topButtons">
             <div class="data">
