adaptywność całej strony

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <section class="foodSuggest">
                     <div class="imgFood"> <img src="obrazki/2.jpg" alt="Wylosowany obiadek" width="300 " height="400px">
                         <div class="titleRecipe2">
-                            <h3>Nazwa przepisu</h3>
+                            <h3>Lorem ipsum dolor sit amet </h3>
                         </div>
                     </div>
                     <article class="buttons2">
