--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- navigation -->
-   <nav class="navbar navbar-expand-lg bg-success navbar-dark py-3">
+   <nav class="navbar navbar-expand-lg bg-success navbar-dark py-3 fixed-top">
        <div class="container ">
            <a href="#" class="navbar-brand"> WeDiet.Co</a>
         <div class="collapse navbar-collapse" id="navi"></div>
@@ -39,7 +39,7 @@
         </ul>
         </div>
    </nav>
-<!-- entry pic + order diet section -->
+<!-- header -->
     <section class="bg-light text-success py-5 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
@@ -52,7 +52,7 @@
     </section>
    
 <!-- ABOUT  -->
-<section class="bg-success text-light p-5 text-center text-sm-start">
+<section id="info" class="bg-success text-light p-5 text-center text-sm-start">
     <div class="container">
         <div class="d-sm-flex align-items-center justify-content-between">
             <img id="image" class="img-fluid d-none d-sm-block" src="Humaaans - 3 Characters.png" alt="Picture of people">
@@ -63,7 +63,7 @@
                 </div>
 </section>
 <!-- BMI CALCULATOR -->
-<section class="bg-light text-success py-5 text-center text-sm-start">
+<section id="BMI" class="bg-light text-success py-5 text-center text-sm-start">
     <div class="container">
         <div class="d-sm-flex align-items-center justify-content-between">
             <div>
@@ -76,28 +76,104 @@
 
 <!-- TEAM  -->
 
-<section class="bg-success text-light p-5 text-center text-sm-start">
+<section id="team" class="bg-success text-light p-5 text-center text-sm-start">
     <div class="container">
-        <div class="d-sm-flex align-items-center justify-content-between">
-            <div class="p-4 text-justify">
-                    <h1> OUR TEAM </h1>
-                    <p class="lead my-4"> here should be reqres API </p>
+       <h2 class="text-center">OUR TEAM</h2>
+       <p class="lead text-center text-white mb-5">
+        Meet our the team of certificated dieteticians that will help you loose weight!
+       </p>
+       <div>
+           <div id="teamCards" class="team-container">   
+           </div>
+       </div>
                 </div>
 </section>
+<!-- FAQ -->
 
-<!-- <section class="section bg-success text-light p-5">
-    <div class="container">
-
-        <img id="image" class="img-fluid d-none d-sm-block" src="Humaaans - 3 Characters.png" alt="human picture">
-        <div>
-            <h1> ABOUT US </h1>
+<section id="faq" class="bg-light text-successs p-5">
+  <div class="container">
+      <h2 class="text-center text-success mb-4"> Frequently Asked Questions</h2>
+      <div class="accordion accordion-flush" id="faq">
+          <!-- faq 1 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header" id="flush">
+            <button class="accordion-button collapsed text-success" type="button" data-bs-toggle="collapse" data-bs-target="#faq-one" >
+              What is the price of your diet plan?
+            </button>
+          </h2>
+          <div id="faq-one" class="accordion-collapse collapse text-success" data-bs-parent="#faq">
+            <div class="accordion-body"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. In magni recusandae aspernatur sunt incidunt, quia molestiae enim deserunt repellendus ut repellat totam, suscipit eaque distinctio eius. Eius explicabo voluptatem architecto.
+            Atque earum, beatae, hic quas tenetur a omnis dolores possimus adipisci quod at. Nam cumque, ratione ex illo neque voluptatem numquam magnam harum nobis, ducimus molestiae totam, deleniti tempora. Perspiciatis!
+            Suscipit ea ut animi minus quam doloribus? Eligendi cumque eveniet, quasi id voluptatibus quod laudantium qui beatae corrupti, sed architecto aliquid unde? Ullam ea eum ducimus sunt at a veritatis?</div>
+          </div>
         </div>
+        <!-- faq 2 -->
+        <div class="accordion-item text-success">
+          <h2 class="accordion-header" id="flush">
+            <button class="accordion-button collapsed text-success" type="button" data-bs-toggle="collapse" data-bs-target="#faq-2" >
+             How much it takes to see the difference?
+            </button>
+          </h2>
+          <div id="faq-2" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Est voluptatum exercitationem beatae excepturi, nobis numquam libero quisquam error assumenda sit corporis. Iusto soluta reprehenderit placeat magni officia sit ea quae!
+            Ratione nesciunt officiis veniam! Deleniti aperiam repudiandae atque architecto, excepturi, tempora mollitia cum ipsum facilis minima quod placeat vitae eligendi vel quis voluptatum laudantium obcaecati eaque. Ullam minima necessitatibus harum!
+            Sunt, enim? Voluptatum, fugit dolor cumque et doloremque repellat quibusdam aspernatur? Quisquam, obcaecati? Exercitationem enim commodi debitis velit expedita nihil, sequi quas sunt provident aliquid nam molestiae sint officia suscipit.</div>
+          </div>
+        </div>
+        <!-- faq 3 -->
+        <div class="accordion-item text-success">
+          <h2 class="accordion-header" id="flush">
+            <button class="accordion-button collapsed text-success" type="button" data-bs-toggle="collapse" data-bs-target="#faq-3">
+              Do I have to workout?
+            </button>
+          </h2>
+          <div id="faq-3" class="accordion-collapse collapse"  data-bs-parent="#accordionFlushExample">
+            <div class="accordion-body"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo ipsa iure perferendis aliquam distinctio sint, incidunt quos eveniet minima eius magnam quia corporis, non debitis error vero labore quod sapiente!
+            Dolores debitis cum quia possimus, odio impedit. Soluta molestias accusamus quae consequuntur culpa aut voluptatibus quisquam cupiditate possimus! Repellat sit placeat quidem id! Repudiandae reprehenderit, ducimus obcaecati incidunt sequi odio!
+            Vero, consequatur at repellat asperiores obcaecati qui assumenda maxime a hic quo. Voluptatibus, labore. Mollitia dignissimos nesciunt quo est, corrupti aut recusandae perferendis ad blanditiis. Exercitationem aliquam adipisci praesentium suscipit?
+            Vel hic quos vero debitis provident recusandae culpa dolorem. Nemo, adipisci totam perspiciatis blanditiis suscipit eveniet. Fugiat harum odio facilis cum libero sunt rem! Veritatis repellendus similique aliquid molestias deserunt!
+            Voluptatem minima delectus eius illo! Corporis minima tempore reprehenderit recusandae nemo, omnis quas officia cumque iure dolores. Iusto, dignissimos quasi quisquam est facilis omnis reprehenderit? Eum nostrum voluptate neque in!</div>
+          </div>
+        </div>
+        <!-- faq 4 -->
+        <div class="accordion-item text-success">
+            <h2 class="accordion-header" id="flush">
+              <button class="accordion-button collapsed text-success" type="button" data-bs-toggle="collapse" data-bs-target="#faq-4" >
+              How long the diet lasts?
+              </button>
+            </h2>
+            <div id="faq-4" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Est voluptatum exercitationem beatae excepturi, nobis numquam libero quisquam error assumenda sit corporis. Iusto soluta reprehenderit placeat magni officia sit ea quae!
+              Ratione nesciunt officiis veniam! Deleniti aperiam repudiandae atque architecto, excepturi, tempora mollitia cum ipsum facilis minima quod placeat vitae eligendi vel quis voluptatum laudantium obcaecati eaque. Ullam minima necessitatibus harum!
+              Sunt, enim? Voluptatum, fugit dolor cumque et doloremque repellat quibusdam aspernatur? Quisquam, obcaecati? Exercitationem enim commodi debitis velit expedita nihil, sequi quas sunt provident aliquid nam molestiae sint officia suscipit.</div>
+            </div>
+          </div>
+          <!-- faq-5 -->
+          <div class="accordion-item text-success">
+            <h2 class="accordion-header" id="flush">
+              <button class="accordion-button collapsed text-success" type="button" data-bs-toggle="collapse" data-bs-target="#faq-5" >
+              When can I expect first results?
+              </button>
+            </h2>
+            <div id="faq-5" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+              <div class="accordion-body"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Est voluptatum exercitationem beatae excepturi, nobis numquam libero quisquam error assumenda sit corporis. Iusto soluta reprehenderit placeat magni officia sit ea quae!
+              Ratione nesciunt officiis veniam! Deleniti aperiam repudiandae atque architecto, excepturi, tempora mollitia cum ipsum facilis minima quod placeat vitae eligendi vel quis voluptatum laudantium obcaecati eaque. Ullam minima necessitatibus harum!
+              Sunt, enim? Voluptatum, fugit dolor cumque et doloremque repellat quibusdam aspernatur? Quisquam, obcaecati? Exercitationem enim commodi debitis velit expedita nihil, sequi quas sunt provident aliquid nam molestiae sint officia suscipit.</div>
+            </div>
+          </div>
+      </div>
+  </div>
+</section>
 
-    </div>
-</section> -->
-
-
-
+<!-- CONTACT -->
+<section id="contact" class="bg-success text-light p-5 ">
+    <div class="container">
+        <div class="row g-4">
+            <div class="p-4 text-justify">
+                    <h1> CONTACT US</h1>
+                    <p class="lead my-4"> HERE WILL BE CONTACT SECTION</p>
+                </div>
+</section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="main.js"></script>
