CSS styling update

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
     <header class="header">
         <div class="center-allign">
-            <h3>Want to sing but don't know the lyrics by heart?</h2>
-            <h6>Let's search for it!</h4>
+            <h1 id="title">Want to sing but don't know the lyrics by heart?</h2>
+            <h3 id="subtitle">Let's search for it!</h4>
         </div>
     </header>
     <section class="main-section">
@@ -32,7 +32,7 @@
         </article>
         <article class="lyrics">
             <div class="center" id="lyrics">
-                <div id="LyricsContent">Lyrics</div>
+                <div id="LyricsContent"></div>
             </div>
         </article>
     </section>
