--- a/index.html
+++ b/index.html
@@ -84,22 +84,22 @@
     <div id="aurora-gallery" class="box">
       <div class="gallery">
         <article class="gallerypicture">
-          <img src="zdjęcia/aurora-borealis-744351_960_720.webp" alt="Aurora" />
+          <img src="zdjecia/aurora-borealis-744351_960_720.webp" alt="Aurora" />
         </article>
         <article class="gallerypicture">
-          <img src="zdjęcia/aurora-g537af5b0e_1920.jpg" alt="Aurora" />
+          <img src="zdjecia/aurora-g537af5b0e_1920.jpg" alt="Aurora" />
         </article>
         <article class="gallerypicture">
-          <img src="zdjęcia/aurora-g74f410e95_1920.jpg" alt="Aurora" />
+          <img src="zdjecia/aurora-g74f410e95_1920.jpg" alt="Aurora" />
         </article>
         <article class="gallerypicture">
-          <img src="zdjęcia/nature-gd8b0ff76e_1920.jpg" alt="Aurora" />
+          <img src="zdjecia/nature-gd8b0ff76e_1920.jpg" alt="Aurora" />
         </article>
         <article class="gallerypicture">
-          <img src="zdjęcia/northern-lights-g10bf04e4b_1920.jpg" alt="Aurora" />
+          <img src="zdjecia/northern-lights-g10bf04e4b_1920.jpg" alt="Aurora" />
         </article>
         <article class="gallerypicture">
-          <img src="zdjęcia/northern-lights-gc31bdc65b_1920.jpg" alt="Aurora" />
+          <img src="zdjecia/northern-lights-gc31bdc65b_1920.jpg" alt="Aurora" />
         </article>
       </div>
     </div>
