--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
       <p id="logo" class="navigation">Logo</p>
       <p id="new-image" class="navigation">Draw new image!</p>
       <p id="previous-project" class="navigation">Previous projects</p>
-      <p id="me">About me</p>
+      <p id="me" class="navigation">About me</p>
     </nav>
     <header id="header">
       <section class="colors" class="left">
         <div id="generated-colors"></div>
-        <button id="color-button">Generate colors</button>
+        <button id="color-button" class="btn">Generate colors</button>
       </section>
       <section class="emojis" class="right">
-        <a id="previous">&#8249;</a>
+        <a id="previous" class="e-btn">&#8249;</a>
         <span id="generated-emojis"></span>
-        <a id="next">&#8250;</a>
-        <button id="emojis-button">Generate emojis</button>
+        <a id="next" class="e-btn">&#8250;</a>
+        <button id="emojis-button" class="btn">Generate emojis</button>
       </section>
     </header>
     <main>
       <canvas id="canvas" width="300" height="350">The canva is error</canvas>
       <section id="buttons">
-        <button id="clear-button">Clear</button>
-        <a id="save-button">Save</a>
+        <button id="clear-button" class="btn">Clear</button>
+        <a id="save-button" class="btn">Save</a>
         <section id="previous-project-display">
         </section>
       </section>
