fetch - add search bar - search by contact name - reqres.in

--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
       <header class="main-title">
           <h1>Business Contact List</h1>
       </header>
-      <main class="contact-list">
+      <main>
+        <div class="search-wrapper">
+          <input
+            type="text"
+            name="searchBar"
+            class="search-bar"
+            placeholder="search for a contact by name"
+          />
+        </div>
+        <div class="contact-list"></div>
       </main>
       <footer class="footer-desc">
         <h5>Html - CSS - JavaScript + Fetch API</h5>
