--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title> Javascript Project - 2022 </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css" integrity="sha512-hoalWLoI8r4UszCkZ5kL8vayOGVae1oxXe/2A4AO6J9+580uKHDO3JdHb7NzwwzK5xr/Fs0W40kiNHxM9vyTtQ==" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js" integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ==" crossorigin=""></script>
 
 </head>
 <body>
@@ -28,13 +30,18 @@
                 <a href="#team" class="nav-link">Our team
                 </a>
             </li>
-            <li class="nav-item">
-                <a href="#contact" class="nav-link">Contact
-                </a>
-            </li>
             <li class="navbar-nav ms-auto" >
-                <a href="#faq" class="nav-link">FAQ
-                </a>
+              <a href="#faq" class="nav-link">FAQ
+              </a>
+
+              <li class="nav-item">
+                  <a href="#opinions" class="nav-link">Opinions
+                  </a>
+              </li>
+              <li class="nav-item">
+                  <a href="#contact" class="nav-link">Contact
+                  </a>
+              </li>
             </li>
         </ul>
         </div>
@@ -69,6 +76,7 @@
             <div>
                     <h1> <span class="text-warning"> BMI </span> CALCULATOR </h1>
                     <p class="lead my-4"> here should be bmi api </p>
+                    <div class="bmi-container"></div>
                     <button class="btn btn-center btn-warning btn-lg"> count caloriess</button>
                 </div>
                 <img id="image" class="img-fluid d-none d-sm-block" src="Stuck at Home - Stats and Graphs.png" alt="drawing of a man">
@@ -84,6 +92,7 @@
        </p>
        <div>
            <div id="teamCards" class="team-container">   
+           </div>
            </div>
        </div>
                 </div>
@@ -164,16 +173,83 @@
       </div>
   </div>
 </section>
+<!-- OPINIONS -->
+<section  id="opinions" class="bg-success text-light p-5 text-center ">
+  
+  <h2>Check some opinions about us!</h2>
+  
+  <div class="people-data text-center">
+
+    <img src="https://cdn-icons-png.flaticon.com/512/147/147144.png
+    " id="new_picture"/>
+        <div>
+  
+            <p>
+                <span> Name: </span><span id="new_name"></span>
+            </p>
+            <p>
+                <span> e-mail: </span><span id="new_email"></span>
+            </p>
+  </div>
+          <p>
+            <span>What they say: </span>
+              <div id="text_opinion" class="not_visible">
+               <span> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis quae, magnam autem sunt, dolore iure natus placeat sint quidem tempora soluta praesentium at illum eos? Vero repellat numquam quasi delectus.
+              Velit amet nobis est officia voluptatem aliquam! Doloremque excepturi sequi vitae obcaecati beatae saepe reiciendis, perspiciatis, maiores omnis harum dignissimos ea corrupti temporibus facilis repellat sint blanditiis impedit laboriosam ab!</span>
+              </div>
+                
+          </p>
+          <button class="generate_button" id="generate_opinion">Check opinions</button>
+      </div>
+
+</section>
+
+
+
+</section>
 
 <!-- CONTACT -->
-<section id="contact" class="bg-success text-light p-5 ">
+<section id="contact" class="bg-light text-success p-5 text-center text-sm-start">
     <div class="container">
         <div class="row g-4">
-            <div class="p-4 text-justify">
-                    <h1> CONTACT US</h1>
-                    <p class="lead my-4"> HERE WILL BE CONTACT SECTION</p>
+           <div class="col-md">
+             <h2 class="text center mb-4 text-contact">
+              Contact info
+              <ul class="list-group list-group-flush lead list-contact">
+                <li class="list-group-item">
+                  <span class="fw-bold">Main location:</span>  Example Street 12/22 Boston
+                </li>
+                <li class="list-group-item">
+                  <span class="fw-bold">Call Center:</span>  +00 000 000 000
+                </li>
+                <li class="list-group-item">
+                  <span class="fw-bold">e-mail:</span>  example@email.com
+                </li>
+                <li class="list-group-item">
+                  <span class="fw-bold"> Account: </span>  00 0000 0000 0000 0000 0000
+                </li>
+                
+              </ul>
+             </h2>
+           </div>
+           <div class="col-md"> 
+
+            <div id="map">
+            </div>
+
+           </div>
                 </div>
 </section>
+<!-- footer  -->
+<footer class="p-5 bg-success text-white text-center position-relative">
+  <div class="container">
+    <p class="p lead"> 
+      Made by: Paulina for CDV project 
+    </p>
+
+  </div>
+
+</footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="main.js"></script>
