post section cleanup
added a gallery grid to post section and another to see more section

--- a/index.html
+++ b/index.html
@@ -42,13 +42,22 @@
                 <h2 class="post_title"><a href="#">Generic upbeat post title</a></h2>
             </div>
             <div class="content">
-                <img class="post_img main_img" alt="Lifestyle main photo" src="">
-                <img class="post_img another_img" alt="Lifestyle secondary photo" src="">
-                <img class="post_img another_img" alt="Lifestyle secondary photo" src="">
-                <p class="post_paragraph">x</p>
-                <p class="post_paragraph">x</p>
-                <p class="post_paragraph">x</p>
-                <p class="post_paragraph">x</p>
+                <div class="post_imgs">
+                    <img class="post_img main_img" alt="Lifestyle main photo" src="https://images.pexels.com/photos/1055691/pexels-photo-1055691.jpeg">
+                    <img class="post_img another_img" alt="Lifestyle secondary photo" src="https://images.pexels.com/photos/325521/pexels-photo-325521.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+                    <img class="post_img another_img" alt="Lifestyle secondary photo" src="https://images.pexels.com/photos/2253275/pexels-photo-2253275.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2">
+                 </div>
+                 <div class="post_text">
+                     <p class="post_paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi possimus, doloremque deserunt obcaecati est reiciendis dignissimos deleniti laborum ipsam facere corrupti veritatis iusto perferendis delectus alias nam commodi. Possimus, consequuntur!
+                     Reprehenderit fugiat ducimus similique iste alias nam numquam, nulla iure necessitatibus dignissimos possimus, expedita soluta autem est itaque repudiandae doloremque. Incidunt aliquam exercitationem error deserunt rerum iste voluptatum molestias blanditiis?
+                     </p>
+                     <p class="post_paragraph">Sunt culpa nam ratione accusamus, illum nisi asperiores. Odio laboriosam doloribus officiis! Voluptates possimus molestiae magni doloremque hic maxime fugiat. Eos voluptas recusandae laborum? Dicta aliquam pariatur repellat alias quae.
+                     </p>
+                     <p class="post_paragraph">Nihil quasi tempore sint ex omnis? Sint eos reprehenderit debitis alias nostrum similique, fugiat pariatur totam blanditiis quia minus hic at earum placeat numquam, expedita, maxime quasi? Eum, distinctio optio.
+                     A autem minima dolore, voluptatum eum laudantium sed molestias cum velit quo aut aliquid repellendus culpa molestiae aspernatur quaerat ullam exercitationem enim quis. Nihil tempore ipsam dolorum id aspernatur officia?
+                     </p>
+                     <p class="post_paragraph">Atque necessitatibus blanditiis veniam reprehenderit fuga omnis? Quas vero commodi sed ducimus repellendus doloribus porro necessitatibus numquam sint repudiandae assumenda voluptatibus ea aut excepturi impedit eligendi dolor explicabo, quidem voluptate.</p>
+                 </div>
             </div>
             <div class="post_footnote">
                 <a href="#comments">View comments</a>
@@ -88,10 +97,12 @@
         </div>
         <div class="see_more">
             <h3 class="see_more_title">See more</h3>
-            <img class="more_posts_img" alt="Check out another post" src="">
-            <img class="more_posts_img" alt="Check out another post" src="">
-            <img class="more_posts_img" alt="Check out another post" src="">
-            <img class="more_posts_img" alt="Check out another post" src="">
+            <div class="see_more_gallery">
+                <a href="#"><img class="more_posts_img" alt="Check out another post" src="https://images.pexels.com/photos/1148960/pexels-photo-1148960.jpeg"></a>
+                <a href="#"><img class="more_posts_img" alt="Check out another post" src="https://images.pexels.com/photos/4731084/pexels-photo-4731084.jpeg"></a>
+                <a href="#"><img class="more_posts_img" alt="Check out another post" src="https://images.pexels.com/photos/2281793/pexels-photo-2281793.jpeg"></a>
+                <a href="#"><img class="more_posts_img" alt="Check out another post" src="https://images.pexels.com/photos/4786270/pexels-photo-4786270.jpeg"></a>
+            </div>
         </div>
     </section>
     <section id="footnote">
