--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
           </div>
         <nav>
             <ul id="main_menu">
-                <li class="menu_item"><a href='#'>Home</a></li>
-                <li class="menu_item"><a href='#'>Archive</a></li>
-                <li class="menu_item"><a href='#'>About</a></li>
-                <li class="menu_item" id="menu_login"><a href='#'>Log In</a></li>
-
+                <li><a href='#'>Home</a></li>
+                <li><a href='#'>Archive</a></li>
+                <li><a href='#'>About</a></li>
+                <li id="menu_login"><a href='#'>Log In</a></li>
+                <li><a href="#"><img class="sm_icon" src="/assets/facebook.png"/></a></li>
+                <li><a href="#"><img class="sm_icon" src="/assets/instagram.png"/></a></li>
+                <li><a href="#"><img class="sm_icon" src="/assets/pinterest.png"/></a></li>
             </ul>
         </nav>
     </section>
@@ -61,11 +63,6 @@
             </div>
             <div class="post_footnote">
                 <a href="#comments">View comments</a>
-                <ul id="social_links">
-                    <li class="sm_icon"><a href="#">FB</a></li>
-                    <li class="sm_icon"><a href="#">instagram</a></li>
-                    <li class="sm_icon"><a href="#">pinterest</a></li>
-                </ul>
             </div>
         </div>
         <div class="comments_section hidden">
